# Real-Time-Sensor-Telemetry-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: HeartbeatSensor.h  Logger.h  PressureSensor.h  RadiationSensor.h  Sensor.h  SensorReading.h  TelemetryProcessor.h  TelemetryQueue.h  TemperatureSensor.h  VoltageSensor.h
scripts/: build_run.sh  gen_svg.py
src/: HeartbeatSensor.cpp  Logger.cpp  PressureSensor.cpp  RadiationSensor.cpp  Sensor.cpp  TelemetryProcessor.cpp  TelemetryQueue.cpp  TemperatureSensor.cpp  VoltageSensor.cpp  main.cpp
tests/: test_sensors.cpp
